Fix layout bugs
User the desktop breakpoint instead for sidebar hiding.

--- a/assets/html/scss/documenter/_theme_overrides.scss
+++ b/assets/html/scss/documenter/_theme_overrides.scss
@@ -3,6 +3,7 @@
   font-size: $body-size;
 
   // From: documenter/layout/_all
-  overflow-x: hidden;
-  overflow-y: hidden;
+  overflow-x: auto;
+  // overflow-x: hidden;
+  // overflow-y: hidden;
 }
